// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration: can render mocked EntryButtons as children 1`] = `
<ForwardRef(FrameComponent)
  boxShadow="$in"
  className="entries-grid"
>
  <div>
    <img
      alt="2026-04-10"
      src="/test.png"
    />
    <span>
      2026-04-10
    </span>
  </div>
</ForwardRef(FrameComponent)>
`;

exports[`Unit: matches snapshot with with a test child 1`] = `
<ForwardRef(FrameComponent)
  boxShadow="$in"
  className="entries-grid"
>
  <div
    data-testid="test-child"
  >
    Test Child
  </div>
</ForwardRef(FrameComponent)>
`;
